--- a/web/app/themes/platformlondon/styles/header.css
+++ b/web/app/themes/platformlondon/styles/header.css
@@ -69,10 +69,6 @@ header .wp-block-search {
     @apply !mb-0;
 }
 
-header .wp-block-search__input {
-    background-position: 96%;
-}
-
 header a:focus, header a:hover {
     background: none;
 }
