--- a/web/app/themes/platformlondon/styles/search.css
+++ b/web/app/themes/platformlondon/styles/search.css
@@ -7,8 +7,9 @@
     @apply border border-dark-green rounded-full green-shadow truncate relative z-40 !px-4;
     background: url("/app/themes/platformlondon/assets/img/search.svg");
     background-repeat: no-repeat;
-    background-position: 98%;
+    background-position: right 16px top 11px;
 }
+
 .wp-block-search__input:hover,.wp-block-search__input:focus {
     @apply yellow-shadow;
 }
